tryphon_macros/tests/ui/fail/decoder_union.stderr
error: You can only derive ConfigValueDecoder for enums without fields or newtype structs
 --> tests/ui/fail/decoder_union.rs:3:10
  |
3 | #[derive(ConfigValueDecoder)]
  |          ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ConfigValueDecoder` (in Nightly builds, run with -Z macro-backtrace for more info)
